tests/fixtures/valid/ignored/builtins/id.py
# Valid id() calls
# Auto-generated by scripts/generate_tests.py

b0_id_int = id(1)
b1_id_float = id(1.0)
b2_id_bool = id(True)
b3_id_str = id("hello")
b4_id_bytes = id(b"hello")
b5_id_list = id([1, 2, 3])
b6_id_dict = id({"a": 1})
b7_id_set = id({1, 2, 3})
b8_id_none = id(None)

print("id() tests passed!")
